// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`jsx > Confirm > can set active text 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo?
[36m│[39m  [32m●[39m DO IT [2m/[22m [2m○[22m [2mNo[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo?
[90m│[39m  [2mDO IT[22m",
  "
",
  "<cursor.show>",
]
`;

exports[`jsx > Confirm > can set inactive text 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo?
[36m│[39m  [32m●[39m Yes [2m/[22m [2m○[22m [2mDONT DO IT[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo?
[90m│[39m  [2mYes[22m",
  "
",
  "<cursor.show>",
]
`;

exports[`jsx > Confirm > can set message 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo?
[36m│[39m  [32m●[39m Yes [2m/[22m [2m○[22m [2mNo[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo?
[90m│[39m  [2mYes[22m",
  "
",
  "<cursor.show>",
]
`;

exports[`jsx > Note > can render children as message 1`] = `
[
  "[90m│[39m
[32m◇[39m  [0m[0m [90m──────────╮[39m
[90m│[39m             [90m│[39m
[90m│[39m  [2ma message[22m  [90m│[39m
[90m│[39m             [90m│[39m
[90m├─────────────╯[39m
",
]
`;

exports[`jsx > Note > can render complex results as message 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  say yes
[36m│[39m  [32m●[39m Yes [2m/[22m [2m○[22m [2mNo[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  say yes
[90m│[39m  [2mYes[22m",
  "
",
  "<cursor.show>",
  "[90m│[39m
[32m◇[39m  [0m[0m [90m─────╮[39m
[90m│[39m        [90m│[39m
[90m│[39m  [2mtrue[22m  [90m│[39m
[90m│[39m        [90m│[39m
[90m├────────╯[39m
",
]
`;

exports[`jsx > Note > can render multiple children as message 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  say yes
[36m│[39m  [32m●[39m Yes [2m/[22m [2m○[22m [2mNo[22m
[36m└[39m
",
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  say yes again
[36m│[39m  [32m●[39m Yes [2m/[22m [2m○[22m [2mNo[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  say yes
[90m│[39m  [2mYes[22m",
  "
",
  "<cursor.show>",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  say yes again
[90m│[39m  [2mYes[22m",
  "
",
  "<cursor.show>",
  "[90m│[39m
[32m◇[39m  [0m[0m [90m─────╮[39m
[90m│[39m        [90m│[39m
[90m│[39m  [2mtrue[22m  [90m│[39m
[90m│[39m  [2mtrue[22m  [90m│[39m
[90m│[39m        [90m│[39m
[90m├────────╯[39m
",
]
`;

exports[`jsx > Note > can render string message 1`] = `
[
  "[90m│[39m
[32m◇[39m  [0m[0m [90m────╮[39m
[90m│[39m       [90m│[39m
[90m│[39m  [2mfoo[22m  [90m│[39m
[90m│[39m       [90m│[39m
[90m├───────╯[39m
",
]
`;

exports[`jsx > Password > can set custom mask 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [7m[8m_[28m[27m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=2>",
  "<erase.line><cursor.left count=1>",
  "[36m│[39m  ![7m[8m_[28m[27m",
  "<cursor.down count=2>",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=2>",
  "<erase.line><cursor.left count=1>",
  "[36m│[39m  !![7m[8m_[28m[27m",
  "<cursor.down count=2>",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo
[90m│[39m  [2m!![22m",
  "
",
  "<cursor.show>",
]
`;

exports[`jsx > Password > renders password input 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [7m[8m_[28m[27m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo
[90m│[39m",
  "
",
  "<cursor.show>",
]
`;

exports[`jsx > Password > renders user input 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [7m[8m_[28m[27m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=2>",
  "<erase.line><cursor.left count=1>",
  "[36m│[39m  ▪[7m[8m_[28m[27m",
  "<cursor.down count=2>",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=2>",
  "<erase.line><cursor.left count=1>",
  "[36m│[39m  ▪▪[7m[8m_[28m[27m",
  "<cursor.down count=2>",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo
[90m│[39m  [2m▪▪[22m",
  "
",
  "<cursor.show>",
]
`;

exports[`jsx > Text > can set default value 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [7m[8m_[28m[27m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo
[90m│[39m  [2mbar[22m",
  "
",
  "<cursor.show>",
]
`;

exports[`jsx > Text > can set initial value 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  bar█
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo
[90m│[39m  [2mbar[22m",
  "
",
  "<cursor.show>",
]
`;

exports[`jsx > Text > can set placeholder 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [7mb[27m[2mar[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo
[90m│[39m",
  "
",
  "<cursor.show>",
]
`;

exports[`jsx > Text > renders text input 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [7m[8m_[28m[27m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo
[90m│[39m",
  "
",
  "<cursor.show>",
]
`;
